[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/polkadot-sdk-minimal-template.git"
edition = "2021"
version = "0.1.0-beta.8"
rust-version = "1.73"
documentation = "https://fhe.rs"

[workspace]
members = [
	"pallets/cloak-pallet",
	"runtime",
	"crates/fhe",
    "crates/fhe-math",
    "crates/fhe-traits",
    "crates/fhe-util"
]
resolver = "2"


[workspace.dependencies]
# base deps
parity-scale-codec = { version = "3.0.0", default-features = false }
scale-info = { version = "2.6.0", default-features = false }

# primitives
sp-runtime = { version = "37.0.0", default-features = false, features = [
	"serde",
] }
sp-io = { version = "36.0.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }

pallet-balances = { version = "35.0.0", default-features = false }
pallet-sudo = { version = "34.0.0", default-features = false }
pallet-transaction-payment = { version = "34.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "34.0.0", default-features = false }
clap = { version = "^4.5.4", features = ["derive"] }
sp-api = { version = "32.0.0", default-features = false }
ahash = { version = "0.8.11", default-features = false}
hashbrown = { version = "0.14.5", default-features = false }
getrandom = { version = "0.2.15", features = ["js"], default-features = false }
concrete-ntt = "^0.1.2"
console = "^0.15.8"
criterion = "^0.5.1"
doc-comment = "^0.3.3"
env_logger = "^0.11.3"
ethnum = "^1.5.0"
fastdiv = "^0.1.0"
indicatif = "^0.17.8"
itertools = "^0.12.1"
log = "^0.4.21"
ndarray = "^0.15.6"
num-bigint = "^0.4.4"
num-bigint-dig = "^0.8.4"
num-traits = "^0.2.18"
proptest = "^1.4.0"
prost = "^0.12.4"
prost-build = "^0.12.3"
rand = "^0.8.5"
rand_chacha = "^0.3.1"
sha2 = "^0.10.8"
thiserror-no-std = "^2.0.0"
zeroize = "^1.8.0"
zeroize_derive = "^1.4.2"
